<resources>
    <string name="app_name">JEconomy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="jeconomy">JEconomy</string>
    <string name="bem_vindo">Bem-Vindo</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="novo_cadastre_se">Novo? Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="senha_repetir">Senha (Repetir)</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="receita">Receita</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="mais">+</string>
    <string name="despesa">Despesa</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="categoria">Categoria</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="cadastro_usu_rio">Cadastro: Usuário</string>
    <string name="cadastro_despesa">Cadastro: Despesa</string>
    <string name="escolher">ESCOLHER</string>
    <string name="forma_de_pagamento">Forma de Pagamento</string>
    <string name="valor">Valor</string>
    <string name="data_de_pagamento">DATA DE PAGAMENTO</string>

    <string-array name="tipo_conta">
        <item>PAGAS</item>
        <item>À PAGAR</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
