<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.jeconomy.activitys.RegisterDespesaActivity">

    <TextView
        android:id="@+id/tv_cadastrodespesa_registerdespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cadastro_despesa"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastrodespesa_registerdespesa"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_categoria_registerdespesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="CATEGORIA" />

            <Spinner
                android:id="@+id/sp_categoria_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_categoria_registerdespesa"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tv_tipo_registerdespesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sp_categoria_registerdespesa"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="DESPESA: " />

            <Spinner
                android:id="@+id/sp_tipo_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/sp_categoria_registerdespesa"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/tv_tipo_registerdespesa" />

            <Button
                android:id="@+id/btn_data_registerdespesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sp_tipo_registerdespesa"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/escolher" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_data_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sp_tipo_registerdespesa"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/btn_data_registerdespesa">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_valor_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_data_registerdespesa"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_formapag_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_valor_registerdespesa"
                android:layout_marginTop="10dp"
                android:text="@string/forma_de_pagamento" />

            <Spinner
                android:id="@+id/sp_formapag_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_formapag_registerdespesa"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:id="@+id/cb_obs_registerdespesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sp_formapag_registerdespesa"
                android:layout_marginTop="10dp"
                android:text="Observação" />


            <EditText
                android:id="@+id/mt_obs_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cb_obs_registerdespesa"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btn_cadastrar_registerdespesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mt_obs_registerdespesa"
                android:layout_marginTop="10dp"
                android:text="@string/cadastrar" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>